Actualización de código

--- a/Project_folder/Makefile
+++ b/Project_folder/Makefile
@@ -4,13 +4,13 @@ top=top
 #test bench del proyecto para la simulación
 tb?=$(top)_tb.v
 MACROS_SIM=-DSIM
-MACROS_RTL=
 MACROS_SYN=
+MORE_SRC2SIM?=
 DESIGN=top.v
 DIR_BUILD=build
 DEVSERIAL=/dev/ttyACM0
 # Z: Nombre para empaquetar proyecto
-Z=blink-freqdiv
+Z=template
 
 top_NAME=$(basename $(notdir $(DESIGN)))
 top?=$(top_NAME)
@@ -18,18 +18,16 @@ PCF?=$(top).pcf
 JSON?=$(DIR_BUILD)/$(top).json
 ASC?=$(DIR_BUILD)/$(top).asc
 BISTREAM?=$(DIR_BUILD)/$(top).bin
+
 # MACRO_SYN sirve para indicar definiciones de preprocesamiento en la sintesis
-MACROS_SYN?=
+MACRO_SYN?=
 MACROS_SYN := $(foreach macro,$(MACROS_SYN),"$(macro)")
 
 help-syn:
 	@echo "\n## SINTESIS Y CONFIGURACIÓN ##"
-	@echo "\tmake syn\t\t-> Sintetizar diseño"
-	@echo "\tmake config\t\t-> Configurar fpga from Flash SPI"
-	@echo "\t\t\t\t   Para configurar desde la flash, se requiere poner un jumper en J7 y en J6 conectar dos jumper entre los pines 4-2 y 3-1"
-	@echo "\tmake config-sram\t-> Configurar fpga desde la CRAM"
-	@echo "\t\t\t\t   Para configurar desde la CRAM, se requiere desconectar el jumper en J7 y en J6 conectar dos jumper entre los pines 4-3 y 2-1"
-	@echo "\tmake clean\t\t-> Limipiar síntesis si ha modificado el diseño"
+	@echo "\tmake syn\t-> Sintetizar diseño"
+	@echo "\tmake config\t-> Configurar fpga"
+	@echo "\tmake clean\t-> Limipiar síntesis si ha modificado el diseño"
 
 syn: json asc bitstream
 
@@ -40,16 +38,14 @@ $(JSON): $(OBJS)
 	yosys $(MACRO_SYN) -p "synth_ice40 -top $(top) -json $(JSON)" $(OBJS)
 
 $(ASC): $(JSON)
-	nextpnr-ice40 --hx8k --package ct256 --json $(JSON) --pcf $(PCF) --asc $(ASC)
+	nextpnr-ice40 --hx4k --package tq144 --json $(JSON) --pcf $(PCF) --asc $(ASC)
 
 $(BISTREAM): $(ASC)
 	icepack $(ASC) $(BISTREAM)
 
 config:
-	iceprog $(BISTREAM)
-
-config-sram:
-	iceprog -S $(BISTREAM)
+	stty -F $(DEVSERIAL) raw
+	cat $(BISTREAM) > $(DEVSERIAL)
 
 json:$(JSON)
 asc:$(ASC)
@@ -64,9 +60,6 @@ zip:
 	sed -n '4,$$p' $(MK_SYN) >> $Z/Makefile
 	sed -n '7,$$p' $(MK_SIM) >> $Z/Makefile
 	cp -var *.v *.md *.pcf .gitignore $Z
-ifneq ($(wildcard *.pdf),) # Si existe un archivo .pdf
-	cp -var *.pdf $Z
-endif
 ifneq ($(wildcard *.mem),) # Si existe un archivo .mem
 	cp -var *.mem $Z
 endif
@@ -111,7 +104,7 @@ help-sim:
 	@echo "\tmake rtl TOP=modulo1\t\t\t:Obtiene el RTL de otros modulos (submodulos)"
 	@echo "\tmake rtl rtl2png\t\t\t:Convertir el RTL del TOP desde formato svg a png"
 	@echo "\tmake rtl rtl2png TOP=modulo1\t\t:Además de convertir, obtiene el RTL de otros modulos (submodulos)"
-	@echo "\tmake ConvertOneVerilogFile\t\t:Crear un único verilog del diseño"
+	@echo "\tmake ConvertOneVerilogFile\t\t\t:Crear un único verilog del diseño"
 
 rtl: rtl-from-json view-svg
 
@@ -135,10 +128,9 @@ vpp-simulate:
 wave:
 	@gtkwave $S/$(TBN).vcd $(TBN).gtkw || (echo "No hay un forma de onda que mostrar en gtkwave, posiblemente no fue solicitada en la simulación")
 
-MACROS_RTL := $(foreach macro,$(MACROS_RTL),"$(macro)")
-json-yosys: ## Generar json para el rtl de netlistsvg
+json-yosys:
 	mkdir -p $S
-	yosys $(MACROS_RTL) -p 'prep -top $(top); hierarchy -check; proc; write_json $S/$(top).json' $(DESIGN)
+	yosys $(MACROS_SIM) -p 'prep -top $(top); hierarchy -check; proc; write_json $S/$(top).json' $(DESIGN)
 
 # Convertir el diseño en un solo archivo de verilog
 ConvertOneVerilogFile:
@@ -148,8 +140,6 @@ ConvertOneVerilogFile:
 	# yosys -p 'read_verilog $(DESIGN); prep -top $(TOP); hierarchy -check; proc; flatten; synth; write_verilog -noattr -noexpr $S/$(TOP).v'
 
 rtl-from-json: json-yosys
-	cp $S/$(top).json $S/$(top)_origin.json # Hacer una copia desde el archivo origen
-	sed -E 's/"\$$paramod\$$[^\\]+\\\\([^"]+)"/"\1"/g' $S/$(top)_origin.json > $S/$(top).json # Quitar parametros en el nombre del módulo para que sea legible.
 	netlistsvg $S/$(top).json -o $S/$(top).svg
 
 view-svg:
