--- a/Project_folder/Makefile
+++ b/Project_folder/Makefile
@@ -2,7 +2,7 @@ help: help-sim help-syn
 clean: clean-syn clean-sim
 top=top
 #test bench del proyecto para la simulación
-tb?=$(top)_tb.v
+tb?=$(StartModule)_tb.v
 MACROS_SIM=
 MACROS_SYN=
 MORE_SRC2SIM?=
