Añadiendo código de PIR que funciona

--- a/sensor_proximidad/Makefile
+++ b/sensor_proximidad/Makefile
@@ -2,7 +2,7 @@ help: help-sim help-syn
 clean: clean-syn clean-sim
 top=top
 #test bench del proyecto para la simulación
-tb?=StartModule_tb.v
+tb?=$(top)_tb.v
 MACROS_SIM=
 MACROS_SYN=
 MORE_SRC2SIM?=
