--- a/Proyecto_pelao_UNAL/Makefile
+++ b/Proyecto_pelao_UNAL/Makefile
@@ -2,8 +2,8 @@ help: help-sim help-syn
 clean: clean-syn clean-sim
 top=top
 #test bench del proyecto para la simulación
-tb?=$(top)_tb.v
-MACROS_SIM=-DSIM
+tb?=ReadModule_tb.v
+MACROS_SIM=
 MACROS_SYN=
 MORE_SRC2SIM?=
 DESIGN=top.v
