--- a/Project_folder/Makefile
+++ b/Project_folder/Makefile
@@ -2,8 +2,8 @@ help: help-sim help-syn
 clean: clean-syn clean-sim
 top=top
 #test bench del proyecto para la simulación
-tb?=StartModule.v
-MACROS_SIM=-DSIM
+tb?=top.v
+MACROS_SIM=
 MACROS_SYN=
 MORE_SRC2SIM?=
 DESIGN=top.v
